[project]
name = "async_eval"
version = "0.3.1"
description = "eval async code from sync"
authors = [{ name = "Yurii Karabas", email = "1998uriyyo@gmail.com" }]
requires-python = ">=3.8"
readme = "README.md"
license = "MIT"

[project.optional-dependencies]
pydevd-pycharm = ["pydevd-pycharm>=232.8660.147"]
trio = ["trio>=0.21"]
all = [
    "pydevd-pycharm>=232.8660.147",
    "trio>=0.21",
]

[project.urls]
Repository = "https://github.com/uriyyo/async-eval"

[dependency-groups]
dev = [
    "pytest>=7.3.1,<10",
    "pytest-asyncio>=0.21.0,<1.4",
    "pytest-cov>=4.1.0,<8",
    "pytest-mock>=3.10.0,<4",
    "pre-commit>=2.21.0,<5",
    "ruff>=0.5.1,<0.15.0",
    "mypy>=1.3.0,<2",
    "pytest-trio>=0.8.0,<0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "S",  # flake8-bandit
    "G",  # flake8-logging-format
    "PIE", # flake8-pie
    "COM", # flake8-commas
    "PT", # flake8-pytest-style
    "Q",  # flake8-quotes
    "RSE", # flake8-raise
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "TRY", # tryceratops
    "RUF", # ruff specific rules
]
ignore = [
    "B008",  # do not perform function calls in argument defaults
    "S101",  # use of assert detected
    "PT004", # fixture doesn't return anything
    "PT013", # allow from pytest import thing
    "SIM114", # allow have multiplie ifs with same body
    "TRY003", # allow long exc message
    "RUF100", # allow unused noqa
    "E402", # allow module level import
    "S102", # allow use of exec
    "COM812", # will be handled by ruff format
]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    ".venv",
]
per-file-ignores = {}
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.mypy]
python_version = 3.8
strict = true
follow_imports = "normal"
ignore_missing_imports = true
no_implicit_reexport = false
show_column_numbers= true
show_error_codes= true

[tool.coverage.paths]
source = ["async_eval"]

[tool.coverage.run]
source = ["async_eval"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@abstractmethod",
    "@overload",
    "if TYPE_CHECKING:",
]
